--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mines: <span id="count">0</span></h1>
-    <div id="board"></div>
-    <button id="flag">🚩</button>
+    <div class="container">
+        <div class="inps">
+            <h1>Time: <span id="time">0</span></h1>
+            <div class="row r1">
+                <p>Columns:</p><input type="text" id="columnInp" value="30">
+            </div>
+            <div class="row r2">
+                <p>Rows:</p><input type="text" id="rowInp" value="30">
+            </div>
+            <div class="row r3">
+                <p>Mines:</p><input type="text" id="mineIn" value="100">
+            </div>
+            <button id="start">Start</button>
+        </div>
+        <div class="boardelems">
+            <h1>Mines: <span id="count">0</span></h1>
+            <div id="board"></div>
+            <button id="flag">🚩</button>
+        </div>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
