Added flag count

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="inps">
-            <h1>Time: <span id="time">00:00</span></h1>
+            <h2>Time: <span id="time">00:00</span></h2>
             <div class="row r1">
                 <p>Columns:</p><input type="text" id="columnInp" value="30">
             </div>
@@ -23,6 +23,7 @@
         </div>
         <div class="boardelems">
             <h1>Mines: <span id="count">0</span></h1>
+            <h3 id="flag-count">Flags: 0</h3>
             <div id="board"></div>
             <button id="flag">🚩</button>
         </div>
