Crude Dark Mode added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <p>Mines:</p><input type="text" id="mineIn" value="100">
             </div>
             <button id="start">Start</button>
+            <button id="mode-switch">Switch Mode</button>
         </div>
         <div class="boardelems">
             <h1>Mines: <span id="count">0</span></h1>
